kubernetes-v2/tech/applications/argocd/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: argocd-http
  namespace: argocd

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.agrrh.com`)
      middlewares:
        - name: whitelist
          namespace: traefik
        - name: request-headers
          namespace: traefik
      services:
        - kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
